# merlin-shell

./: CMakeLists.txt  README.md  main.c
src/: builtin_functions.c  execution.c  input.c  main.c
src/headers/: builtin_functions.h  execution.h  input.h
